# tango

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  commpage.md  input.txt  pair-test.gnuplot  plot.gnuplot  prepare.sh  render-plot.sh  test.sh  tlb-test.sh
.cargo/: config.windows.toml
.github/workflows/: bench.yaml  release.yaml  test-nightly.yaml  test.yaml
benches/: bench.rs  criterion.rs  ordsearch.rs  tango-bench.rs  tango-str.rs  tango-sum.rs  tango-vec.rs  tango.rs  test_funcs.rs
criterion-comparison/: Cargo.toml  README.md  criterion.sh
criterion-comparison/data/: input.txt
doc/: auxilary-metrics.md  commpage.md  metrics.md
examples/: Cargo.toml  bf.rs  criterion-ordsearch.sh  fn.lldb  fn.rs  ordsearch.sh
examples/benches/: common.rs  criterion.rs  ordsearch.rs  panicking.rs  search-btree.rs  search-ord.rs  search-vec.rs  tango-async.rs  tango-faster.rs  tango-slower.rs  test_funcs.rs  threads.rs
hw_perf/: Makefile  README.md  hw_perf.c  hw_perf.h
notebooks/: bootstrap.ipynb  empirical-observations.ipynb  exp.ipynb  ordsearch.ipynb
scripts/: aws-bench.sh  aws-results.sh  calibrate.sh  criterion.sh  describe.py  linear-sampling-test.sh  ordsearch-ci.sh  ordsearch.sh  sensitivity-test.sh  tango.sh
src/: cli.rs  lib.rs  main.rs  test_funcs.rs
tango/: Cargo.toml
tango-bench/: Cargo.toml  build.rs  release.toml
tango-bench/benches/: criterion.rs  tango-bench.rs  tango-faster.rs  tango-slower.rs  tango.rs  test_funcs.rs
tango-bench/examples/: bootstrap.rs  commpage_race.rs
tango-bench/src/: child.rs  cli.rs  commpage.rs  dylib.rs  generators.rs  lib.rs  linux.rs  platform.rs  plot.gnuplot  protocol.rs  windows.rs  worker.rs
tango-bench/tests/: cpu_time.rs  rusage.rs  shmem.rs
tango-compare/: Cargo.toml  README.md  analyze.sh  criterion-vs-tango.gnuplot  graph-tango-vs-tango.ipynb  graph.ipynb  pyproject.toml  run.sh
tango-compare/benches/: criterion.rs  tango.rs
tango-compare/exp1/: README.md  criterion-in-place.txt  criterion.txt  tango.txt
tango-compare/exp2/: README.md  criterion-paired.txt  criterion.txt  tango.txt
tango-compare/exp3/: README.md  criterion-paired.txt  criterion.txt  tango.txt
tango-compare/exp4/: README.md  criterion-in-place.txt  criterion-paired.txt  criterion.txt  tango.txt
tango-compare/exp5/: README.md  criterion-paired.txt  criterion.txt  tango.txt
tango-compare/terraform/: .terraform.lock.hcl  aws-config.tftpl  aws-credentials.tftpl  cloud-config.yaml  init.sh  main.tf  outputs.tf  run.sh  terraform.tfvars.example  variables.tf
tango-comparison/: README.md  count_utf8.py  criterion-vs-tango.gnuplot
tango-comparison/benches/: func.rs
tango-comparison/examples/: gen_utf8.rs
tango-comparison/terraform/: main.tf  variables.tf
tango-test/: Cargo.toml  build.rs
tango-test/src/: main.rs
tango-test/tests/: cli_tests.rs
tango-test/tests/cmd/: compare.stdout  compare.toml  help.stdout  help.toml  solo.stdout  solo.toml
tango/benches/: criterion.rs  tango-bench.rs  tango.rs  test_funcs.rs
tango/examples/: bootstrap.rs
tango/src/: cli.rs  lib.rs
