[package]
name = "rust-pairwise-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
libc = "0.2.148"
mmap = "0.1.1"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "tango-vec"
harness = false

[[bench]]
name = "tango-str"
harness = false
