[package]
name = "tango-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tango-bench = { path="../tango-bench" }
rand = { version = "^0.8", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.5.1"
ordsearch = { version = "^0.2", features = ["nightly"] }
num-traits = "^0.2"

[[bench]]
name = "search-ord"
harness = false

[[bench]]
name = "search-vec"
harness = false

[[bench]]
name = "search-btree"
harness = false

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "tango-faster"
harness = false

[[bench]]
name = "tango-slower"
harness = false

[features]
align = []
