[package]
name = "tango-examples"
version = "0.2.0"
edition = "2021"
autobenches = false

[dependencies]
tango-bench = { path = "../tango-bench" }
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
ordsearch = { version = "0.2.5" }
num-traits = "0.2"
tokio = { version = "1.37.0", features = ["rt", "time"] }

[[bench]]
name = "search-ord"
harness = false

[[bench]]
name = "search-vec"
harness = false

[[bench]]
name = "search-btree"
harness = false

[[bench]]
name = "tango-faster"
harness = false

[[bench]]
name = "tango-slower"
harness = false

[[bench]]
name = "threads"
harness = false

[[bench]]
name = "tango-async"
harness = false
required-features = ["async-tokio", "async-tokio-time"]

[[bench]]
name = "panicking"
harness = false

[features]
prefetch = ["ordsearch/nightly"]
align = []
async-tokio = []
async-tokio-time = []
