[package]
name = "tango-bench"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Tango benchmarking harness"
homepage = "https://github.com/bazhenov/tango"
documentation = "https://docs.rs/tango-bench"
repository = "https://github.com/bazhenov/tango"
readme = "../README.md"
categories = ["development-tools", "development-tools::profiling"]
keywords = ["benchmarks", "performance"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
colorz = { version = "1.1", features = ["supports-color"] }
glob-match = "0.2"
libloading = "0.8"
log = "0.4.20"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1.0.50"

[target.'cfg(target_os = "linux")'.dependencies]
goblin = "0.7.1"
scroll = "0.11"
tempfile = "3.8"

[features]
hw-timer = []

[[bench]]
name = "tango"
harness = false
