[package]
name = "tango-bench"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Tango benchmarking harness"
homepage = "https://github.com/bazhenov/tango"
documentation = "https://docs.rs/tango-bench"
repository = "https://github.com/bazhenov/tango"
readme = "../README.md"
categories = ["development-tools", "development-tools::profiling"]
keywords = ["benchmarks", "performance"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
colorz = { version = "1.1", features = ["supports-color"] }
glob-match = "0.2"
libloading = "0.8"
log = "0.4.20"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1.0.50"
alloca = "0.4"
tokio = { version = "1.37.0", features = ["rt"], optional = true }

# Required for getrusage()
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.177"

# Required for GetProcessTimes and IAT patching
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
] }

# Required for ELF patching
[target.'cfg(target_os = "linux")'.dependencies]
goblin = "0.7.1"
scroll = "0.11"
tempfile = "3.8"

[features]
hw-timer = []
async = []
async-tokio = ["async", "dep:tokio"]
async-tokio-all-drivers = ["async-tokio", "tokio/full"]

[[bench]]
name = "tango"
harness = false
